--- a/static/js/templates/RootLayout.html
+++ b/static/js/templates/RootLayout.html
@@ -2,7 +2,7 @@
     <header id="mainHeader">
         <div class="headerInfo">
             <a id="refresh" href="#">(Refresh Now)</a>
-            <h1><strong id='hostname' >Hostname</strong> <span class="uptime">Uptime</span></h1>
+            <h1><strong id='hostname' >Hostname</strong> <span class="note">Uptime</span></h1>
         </div>
     </header>
 
@@ -10,7 +10,7 @@
         <div id="loadAvg" class="GraphView">
             <header>
                 <div class="headerInfo">
-                    <h2><span class="uptime">Average Load</span></h2>
+                    <h2><span class="note">Average Load</span></h2>
                 </div>
             </header>
 
@@ -61,7 +61,7 @@
         <div id="cpuHive" class="GraphView">
             <header>
                 <div class="headerInfo">
-                    <h2><span class="uptime">Load vs. CPU Usage</span></h2>
+                    <h2><span class="note">Load vs. CPU Usage</span></h2>
                 </div>
             </header>
 
