--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,9 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/screen.css') }}">
         <script data-main="main" src="{{ url_for("static", filename="bower_components/requirejs/require.js") }}"></script>
         <script>{% include "config.js" %}</script>
+        {% if initialSample is defined %}
+        <script>INITIAL_SAMPLE = {{ initialSample | safe }};</script>
+        {% endif %}
     </head>
     <body>
         <div id="container"><!-- TODO: Fallback --></div>
