--- a/static/sass/screen.scss
+++ b/static/sass/screen.scss
@@ -9,7 +9,7 @@
 @import "base";
 @import "util";
 @import "header";
-@import "GraphView";
+@import "GraphCompositeView";
 
 body {
   font-family: "Avenir", "Helvetica Neue", "Helvetica", sans-serif;
