Some cleanup and reorganization, plus some changes to make certain styles / DOM elements more reusable.

--- a/static/js/templates/MainHeader.html
+++ b/static/js/templates/MainHeader.html
@@ -1,4 +1,4 @@
 <div class="headerInfo" title="Last updated: <%- new Date(timestamp).toString() %>">
-    <a id="refresh" href="#">(Refresh Now)</a>
+    <a class="refresh" href="#">(Refresh Now)</a>
     <h1><strong id='hostname'><%- hostname %></strong> <span class="note"><%- formattedUptime() %> uptime</span></h1>
 </div>
