--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -1,7 +1,3 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 /*! normalize.css v3.0.0 | HTML5 Display Definitions | MIT License | git.io/normalize */
 article,
@@ -190,7 +186,7 @@ td,
 th {
   padding: 0; }
 
-#refresh {
+.refresh {
   position: absolute;
   left: 0;
   text-indent: 100%;
@@ -205,7 +201,7 @@ th {
   border-radius: 0.75em;
   background-color: rgba(0, 0, 0, 0.3);
   overflow: hidden; }
-  #refresh:after {
+  .refresh:after {
     content: "";
     position: absolute;
     left: 0;
@@ -228,24 +224,24 @@ th {
     -o-transition-timing-function: ease-in-out;
     -webkit-transition-timing-function: ease-in-out;
     transition-timing-function: ease-in-out; }
-  #refresh:hover, #refresh:focus {
+  .refresh:hover, .refresh:focus {
     background-color: rgba(0, 0, 0, 0.5); }
-    #refresh:hover:after, #refresh:focus:after {
+    .refresh:hover:after, .refresh:focus:after {
       -webkit-transform: rotate(45deg);
       -moz-transform: rotate(45deg);
       -ms-transform: rotate(45deg);
       -o-transform: rotate(45deg);
       transform: rotate(45deg); }
-  #refresh:active {
+  .refresh:active {
     -moz-transition: none;
     -o-transition: none;
     -webkit-transition: none;
     transition: none;
     background-color: rgba(0, 0, 0, 0.65); }
-  #refresh.refreshing {
+  .refresh.refreshing {
     pointer-events: none;
     background-color: rgba(0, 0, 0, 0.15); }
-    #refresh.refreshing:after {
+    .refresh.refreshing:after {
       -webkit-transform: rotate(360deg);
       -moz-transform: rotate(360deg);
       -ms-transform: rotate(360deg);
@@ -255,7 +251,7 @@ th {
       -o-transition-duration: 3s;
       -webkit-transition-duration: 3s;
       transition-duration: 3s; }
-  #refresh.update:after {
+  .refresh.update:after {
     -webkit-transform: rotate(360deg);
     -moz-transform: rotate(360deg);
     -ms-transform: rotate(360deg);
@@ -265,11 +261,11 @@ th {
     -o-transition-duration: 0.25s;
     -webkit-transition-duration: 0.25s;
     transition-duration: 0.25s; }
-  #refresh.update:hover, #refresh.update:focus {
+  .refresh.update:hover, .refresh.update:focus {
     background-color: rgba(126, 211, 33, 0.8); }
-  #refresh.update:active {
+  .refresh.update:active {
     background-color: #7ed321; }
-  #refresh.reset-transition:after {
+  .refresh.reset-transition:after {
     -webkit-transform: rotate(0);
     -moz-transform: rotate(0);
     -ms-transform: rotate(0);
@@ -279,23 +275,23 @@ th {
     -o-transition-property: none;
     -webkit-transition-property: none;
     transition-property: none; }
-  #refresh.alert {
+  .refresh.alert {
     background-color: rgba(245, 166, 35, 0.65); }
-    #refresh.alert:after {
+    .refresh.alert:after {
       text-indent: 0;
       content: "!";
       text-align: center;
       line-height: 1em;
       font-weight: bold; }
-    #refresh.alert:hover, #refresh.alert:focus {
+    .refresh.alert:hover, .refresh.alert:focus {
       background-color: rgba(245, 166, 35, 0.8); }
-      #refresh.alert:hover:after, #refresh.alert:focus:after {
+      .refresh.alert:hover:after, .refresh.alert:focus:after {
         -webkit-transform: none;
         -moz-transform: none;
         -ms-transform: none;
         -o-transform: none;
         transform: none; }
-    #refresh.alert:active {
+    .refresh.alert:active {
       background-color: #f5a623; }
 
 header {
@@ -336,96 +332,90 @@ header {
         color: #d9d9d9; }
       header h1 .note.alert, header h2 .note.alert {
         color: rgba(245, 166, 35, 0.85); }
-  header #refresh + h1 {
+  header .refresh + h1 {
     margin-left: 1.77778em; }
   header .headerInfo {
     background-color: inherit;
     float: left;
     position: relative; }
 
-#mainHeader {
+.mainHeader {
   margin-bottom: 1.75em;
   color: #999999;
   border-color: #d9d9d9; }
 
-@-webkit-keyframes refreshing {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg); }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg); } }
-
-.GraphCompositeView {
+.GraphCompositeView, .AverageLoadCompositeView, .CPUHiveCompositeView {
   position: relative;
   background-color: #fff;
   margin-top: 1em;
   margin-bottom: 0.5em; }
-  .GraphCompositeView .wrapper {
+  .GraphCompositeView .wrapper, .AverageLoadCompositeView .wrapper, .CPUHiveCompositeView .wrapper {
     position: absolute;
     left: 0;
     right: 0;
     top: 0;
     bottom: -0.5em;
     overflow: auto; }
-    .GraphCompositeView .wrapper::-webkit-scrollbar {
+    .GraphCompositeView .wrapper::-webkit-scrollbar, .AverageLoadCompositeView .wrapper::-webkit-scrollbar, .CPUHiveCompositeView .wrapper::-webkit-scrollbar {
       width: 0.5em;
       height: 0.5em; }
-    .GraphCompositeView .wrapper::-webkit-scrollbar-track {
+    .GraphCompositeView .wrapper::-webkit-scrollbar-track, .AverageLoadCompositeView .wrapper::-webkit-scrollbar-track, .CPUHiveCompositeView .wrapper::-webkit-scrollbar-track {
       background-color: #e5e5e5;
       border-radius: 0.25em; }
-    .GraphCompositeView .wrapper::-webkit-scrollbar-thumb {
+    .GraphCompositeView .wrapper::-webkit-scrollbar-thumb, .AverageLoadCompositeView .wrapper::-webkit-scrollbar-thumb, .CPUHiveCompositeView .wrapper::-webkit-scrollbar-thumb {
       background-color: #999999;
       border-radius: 0.25em; }
-    .GraphCompositeView .wrapper svg {
+    .GraphCompositeView .wrapper svg, .AverageLoadCompositeView .wrapper svg, .CPUHiveCompositeView .wrapper svg {
       display: block;
       width: auto !important;
       height: 100% !important;
       background-color: #ccc; }
-  .GraphCompositeView header {
+  .GraphCompositeView header, .AverageLoadCompositeView header, .CPUHiveCompositeView header {
     color: #999999;
     position: absolute;
     top: -1.5625em;
     left: 0;
     right: 0; }
 
-#GraphLayout {
+.GraphLayout {
   float: left;
   width: 100%;
   position: relative; }
 
-#loadAvg {
+.AverageLoadCompositeView {
   width: 70.3125%;
   position: absolute;
   left: 0;
   top: 0;
   bottom: 0; }
-  #loadAvg header {
+  .AverageLoadCompositeView header {
     margin-right: 0.5em; }
 
-#cpuHive {
-  width: 29.6875%;
-  height: 0;
-  float: right;
-  padding-bottom: 29.6875%; }
-  #cpuHive header {
-    margin-left: 0.5em; }
-
-.LoadAverageView rect {
+.AverageLoadView rect {
   fill: green;
   -moz-transition: fill 0.25s ease-in-out;
   -o-transition: fill 0.25s ease-in-out;
   -webkit-transition: fill 0.25s ease-in-out;
   transition: fill 0.25s ease-in-out; }
-  .LoadAverageView rect:hover {
+  .AverageLoadView rect:hover {
     fill: blue; }
+
+.CPUHiveCompositeView {
+  width: 29.6875%;
+  height: 0;
+  float: right;
+  padding-bottom: 29.6875%; }
+  .CPUHiveCompositeView header {
+    margin-left: 0.5em; }
+
+.CPUHiveView rect {
+  fill: orange;
+  -moz-transition: fill 0.25s ease-in-out;
+  -o-transition: fill 0.25s ease-in-out;
+  -webkit-transition: fill 0.25s ease-in-out;
+  transition: fill 0.25s ease-in-out; }
+  .CPUHiveView rect:hover {
+    fill: yellow; }
 
 body {
   font-family: "Avenir", "Helvetica Neue", "Helvetica", sans-serif;
