--- a/static/sass/screen.scss
+++ b/static/sass/screen.scss
@@ -1,16 +1,10 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-
 @import "compass";
-//@import "compass/css3/animation";
 @import "normalize";
 @import "base";
 @import "util";
 @import "header";
-@import "GraphCompositeView";
-@import "LoadAverageView";
+// Also contains styles for .AverageLoad* and .CPUHive*
+@import "GraphComposite";
 
 body {
   font-family: "Avenir", "Helvetica Neue", "Helvetica", sans-serif;
@@ -31,9 +25,3 @@ body {
   clear: both;
   height: 0;
 }
-
-//#loadAvg, #cpuHive {
-//  .wrapper {
-//    padding: $outerMargin;
-//  }
-//}
