--- a/static/sass/_base.scss
+++ b/static/sass/_base.scss
@@ -9,6 +9,7 @@ $h1LineHeight: $h1FontSize * $lineHeightFactor;
 
 $successColor: #7ED321;
 $alertColor: #F5A623;
+$espyBlueColor: #00acc2;
 
 $loadAvgWidth: 70.3125%;
 $loadAvgRatio: 1/2.4;
